Stop page titles overlapping with header on smaller screens

--- a/_sass/components/_grid.scss
+++ b/_sass/components/_grid.scss
@@ -22,6 +22,10 @@
     .content-inner {
         grid-area: content;
         padding-top: 2.5rem;
+
+        @media (max-width: 767px) {
+            padding-top: 5rem;
+        }
     }
 }
 
